Fixed dark mode, and added credits page.

--- a/css/hub.css
+++ b/css/hub.css
@@ -67,7 +67,7 @@ h6 {
 }
 
 h3 {
-    color: #3B6064;
+    color: #3B6064 !important;
     font-family: 'Fredoka', sans-serif;
     margin-bottom: 0px;
     padding-bottom: 0px;
@@ -244,7 +244,7 @@ h3 {
     color: #364958;
     margin-bottom: 0px;
     padding-bottom: 0px;
-    padding-top: 05x;
+    padding-top: 5px;
     margin-top: 0px;
     font-size: 64px;
     padding-left: 0px;
